Fixed arrow alignment

--- a/src/stylesheets/porfolio.scss
+++ b/src/stylesheets/porfolio.scss
@@ -13,7 +13,10 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 100%;
+      left: 0;
+      right: 0;
+      margin-left: auto;
+      margin-right: auto;
       font-size: 20px;
 
       .icon {
